# plan

./: .gitignore  BEST_PRACTICES.md  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
scripts/: agent-loop.sh  dag_builder.py  monte_carlo.py  plan_validate.py  rollback.sh
src/plan_cli/: __init__.py  __main__.py  agent_loop.py  cli.py  dag.py  enterprise.py  executor.py  monte_carlo.py  planning.py  schema.py  utils.py  validator.py
src/plan_cli/templates/: agile.json
templates/: assumptions-log.md  bug-fix.json  compliance.json  decision-register.md  enterprise.json  feature-build.json  migration.json  refactor.json
tests/: test_cli.py  test_dag.py  test_monte_carlo.py  test_validator.py
tests/fixtures/: cycle_plan.json  valid_plan.json
