[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "opencode-plan-cli"
version = "2.1.0"
description = "Agent-first enterprise planning and execution CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12,<0.16",
  "pydantic>=2.8,<3",
  "networkx>=3.3,<4",
  "jsonschema>=4.23,<5",
  "numpy>=2.0,<3",
  "rich>=13.7,<14",
  "shellingham>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
opencode-plan = "plan_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/plan_cli"]
include = [
  "README.md",
  "SKILL.md",
  "BEST_PRACTICES.md",
  "templates/**/*.json",
  "scripts/**/*.sh",
  "scripts/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "SKILL.md",
  "BEST_PRACTICES.md",
  "templates/**/*.json",
  "scripts/**/*.sh",
  "scripts/**/*.py",
  "src/**/*.py",
  "tests/**/*.py",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*", "jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
